--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "license": "MIT",
   "dependencies": {
     "@nativescript/core": "~8.5.0",
+    "@nativescript/firebase-auth": "^3.3.2",
+    "@nativescript/firebase-core": "^3.3.2",
     "@nativescript/theme": "~3.0.2",
+    "firebase": "^11.0.2",
     "rxjs": "~7.8.1"
   },
   "devDependencies": {
@@ -31,12 +34,12 @@
     "@nativescript/ios": "8.5.0",
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.14",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.19.64",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
-    "typescript": "~5.1.3",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "~5.1.3"
   },
   "nativescript": {
     "id": "com.bookverse.app",
