--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "tns run",
     "build": "tns build",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "e2e:build": "detox build",
+    "e2e:ios": "detox test --configuration ios.sim.debug",
+    "e2e:android": "detox test --configuration android.emu.debug",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.{ts,scss}\"",
     "clean": "tns clean"
@@ -37,8 +42,14 @@
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.14",
     "@types/node": "^18.19.64",
+    "@types/jest": "^29.5.0",
+    "@types/detox": "^18.1.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "detox": "^20.18.3",
+    "jest": "^29.5.0",
+    "jest-circus": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "eslint": "^8.42.0",
     "prettier": "^2.8.8",
     "typescript": "~5.1.3"
