--- a/package.json
+++ b/package.json
@@ -52,7 +52,40 @@
     "ts-jest": "^29.1.0",
     "eslint": "^8.42.0",
     "prettier": "^2.8.8",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "expect": "^29.7.0",
+    "pretty-format": "^29.7.0",
+    "ajv": "^8.17.1",
+    "bunyan": "^1.8.15",
+    "bunyan-debug-stream": "^3.1.0",
+    "caf": "^15.0.1",
+    "child-process-promise": "^2.2.1",
+    "detox-copilot": "^0.0.24",
+    "execa": "^5.1.1",
+    "fs-extra": "^11.2.0",
+    "funpermaproxy": "^1.1.0",
+    "glob": "^8.1.0",
+    "ini": "^1.3.8",
+    "jest-environment-emit": "^1.0.8",
+    "json-cycle": "^1.5.0",
+    "lodash": "^4.17.21",
+    "multi-sort-stream": "^1.0.4",
+    "multipipe": "^4.0.0",
+    "node-ipc": "^9.2.1",
+    "proper-lockfile": "^3.2.0",
+    "resolve-from": "^5.0.0",
+    "sanitize-filename": "^1.6.3",
+    "serialize-error": "^8.1.0",
+    "shell-quote": "^1.8.1",
+    "signal-exit": "^3.0.7",
+    "stream-json": "^1.9.1",
+    "telnet-client": "^1.2.8",
+    "tempfile": "^2.0.0",
+    "trace-event-lib": "^1.4.1",
+    "which": "^1.3.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yargs-unparser": "^2.0.0"
   },
   "nativescript": {
     "id": "com.bookverse.app",
