--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,17 +24,23 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Install NativeScript CLI
+      run: npm install -g nativescript
+
     - name: Check commit messages
       uses: wagoid/commitlint-github-action@v5
 
     - name: Lint code
       run: npm run lint
 
+    - name: Format check
+      run: npx prettier --check "src/**/*.{ts,scss,xml}"
+
     - name: Type check
-      run: npm run type-check
+      run: tsc --noEmit
 
     - name: Run unit tests
-      run: npm run test:ci
+      run: npm run test
 
     - name: Upload test coverage
       uses: actions/upload-artifact@v3
@@ -42,8 +48,8 @@ jobs:
         name: coverage
         path: coverage/
 
-  e2e:
-    name: E2E Tests
+  e2e-ios:
+    name: E2E Tests (iOS)
     runs-on: macos-latest
     needs: validate
     
@@ -59,20 +65,65 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Install Detox CLI
-      run: npm install -g detox-cli
+    - name: Install NativeScript CLI
+      run: npm install -g nativescript
 
-    - name: Build app for testing
-      run: npm run build:e2e
+    - name: Install iOS platform
+      run: tns platform add ios
 
-    - name: Run E2E tests
-      run: npm run test:e2e
+    - name: Build iOS app
+      run: npm run e2e:build
+
+    - name: Run E2E tests (iOS)
+      run: npm run e2e:ios
 
     - name: Upload test artifacts
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: e2e-artifacts
+        name: e2e-ios-artifacts
+        path: artifacts/
+
+  e2e-android:
+    name: E2E Tests (Android)
+    runs-on: macos-latest
+    needs: validate
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: Setup Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Install NativeScript CLI
+      run: npm install -g nativescript
+
+    - name: Install Android platform
+      run: tns platform add android
+
+    - name: Build Android app
+      run: npm run e2e:build
+
+    - name: Run E2E tests (Android)
+      run: npm run e2e:android
+
+    - name: Upload test artifacts
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: e2e-android-artifacts
         path: artifacts/
 
   security:
@@ -174,7 +225,7 @@ jobs:
   notify:
     name: Notify on Completion
     runs-on: ubuntu-latest
-    needs: [validate, e2e, security, bundle-analysis, accessibility, documentation]
+    needs: [validate, e2e-ios, e2e-android, security]
     if: always()
     
     steps:
@@ -182,11 +233,9 @@ jobs:
       id: check
       run: |
         if [[ "${{ needs.validate.result }}" == "success" && \
-              "${{ needs.e2e.result }}" == "success" && \
-              "${{ needs.security.result }}" == "success" && \
-              "${{ needs.bundle-analysis.result }}" == "success" && \
-              "${{ needs.accessibility.result }}" == "success" && \
-              "${{ needs.documentation.result }}" == "success" ]]; then
+              "${{ needs.e2e-ios.result }}" == "success" && \
+              "${{ needs.e2e-android.result }}" == "success" && \
+              "${{ needs.security.result }}" == "success" ]]; then
           echo "status=success" >> $GITHUB_OUTPUT
         else
           echo "status=failure" >> $GITHUB_OUTPUT
